integrated all filesystem views

--- a/resources/angular-views/partials/directives/ui-filesystem/layouts/details.html
+++ b/resources/angular-views/partials/directives/ui-filesystem/layouts/details.html
@@ -30,7 +30,7 @@
 
             <td colspan="{{ ::config.detailsLayoutTitles.length }}">
                 <a href="{{ ::parentFolder.href }}">
-                    <i class="fa fa-fw fa-level-up"></i> {{ ::parentFolder.title || 'Parent Folder' }}
+                    <i class="fa fa-fw fa-level-up"></i> {{ ::parentFolder.title || 'Back' }}
                 </a>
             </td>
 
