--- a/resources/assets/sass/directives/ui-filesystem.scss
+++ b/resources/assets/sass/directives/ui-filesystem.scss
@@ -39,19 +39,6 @@
     }
 
     &.ui-filesystem-large-tiles {
-        .card {
-            .data {
-                padding: 20px;
-                height: 20%;
-            }
-
-            &:hover {
-                .data {
-                    height: 70%;
-                }
-            }
-        }
-
         .file, .folder, .parent-folder {
             margin: 0 0 20px;
             background: $dark-blue url(../../images/backgrounds/radial-blue-800.png) center center no-repeat;
@@ -67,7 +54,7 @@
             text-align: center;
 
             > div {
-                padding: 100px 0;
+                padding: 80px 0;
             }
 
             .title {
@@ -81,6 +68,28 @@
             margin-top: 35px;
             text-align: center;
             font-size: 10em;
+        }
+
+        // Card styles.
+        .card {
+            .data section:nth-child(2) {
+                height: 165px;
+            }
+
+            .data-btn {
+                width: 65px;
+                z-index: 1;
+
+                span {
+                    font-size: 0.9em;
+                }
+            }
+
+            &:hover {
+                .data {
+                    height: 230px;
+                }
+            }
         }
     }
 
@@ -100,7 +109,7 @@
             text-align: center;
 
             > div {
-                padding: 50px 0;
+                padding: 75px 0;
             }
 
             .title {
@@ -112,9 +121,31 @@
 
         .folder-icon {
             display: block;
-            margin-top: 25px;
+            margin-top: 35px;
             text-align: center;
             font-size: 4em;
+        }
+
+        // Card styles.
+        .card {
+            .data section:nth-child(2) {
+                height: 115px;
+            }
+
+            .data-btn {
+                margin: 0 auto 8px;
+                z-index: 1;
+
+                span {
+                    font-size: 0.5em;
+                }
+            }
+
+            &:hover {
+                .data {
+                    height: 180px;
+                }
+            }
         }
     }
 }
