--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -8,6 +8,7 @@
 $green: #45825A;
 $blue: #2c3a46;
 $dark-blue: #1c242c;
+$light-blue: #506572;
 //$orange: #db5031;
 $orange: #fabd39;
 $light-gray: #c1bfc0;
@@ -16,7 +17,8 @@ $dark-brown: #503f3c;
 $warning: #eec95a;
 $danger: #db5031;
 $info-alt: #8170ca;
-$heddokogreen: #3bd6b2;
+$heddoko-green: #3bd6b2;
+$heddokogreen: $heddoko-green;
 $silver: #cbd4e3;
 $orangeaccent: #ff8d46;
 $text-color: #ddd;
