Working on analyze screen

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -93,7 +93,7 @@
             </a>
         </li>
 
-        <!-- List of movements -->
+        <!-- Movements -->
 		<li>
             <a href="#/movements">
                 <i class="fa fa-th"></i>
@@ -126,9 +126,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#/movements/analyze">
+                    <a href="#/movements/analyze/demo">
                         <i class="fa fa-angle-right"></i>
-                        <span>Analyze</span>
+                        <span>Analyze (demo)</span>
                     </a>
                 </li>
                 <li>
