--- a/resources/assets/sass/directives/ui-editable-fields.scss
+++ b/resources/assets/sass/directives/ui-editable-fields.scss
@@ -25,6 +25,7 @@ $font-size-smaller: 0.7em;
             margin: 0 10px;
             color: $muted-color;
             @include opacity(0);
+            @include transition(opacity .2s);
         }
 
         .edit-text {
@@ -48,6 +49,46 @@ $font-size-smaller: 0.7em;
         font-size: $font-size-smaller;
         text-transform: uppercase;
         color: $muted-color;
+    }
+
+    .input-type-textarea {
+        display: block;
+        padding: 10px;
+        font-weight: bold;
+        background-color: $light-blue;
+
+        .form-control {
+            display: inline-block;
+            vertical-align: top;
+            width: 90%;
+            font-weight: normal;
+            background-color: transparent;
+            resize: vertical;
+        }
+
+        .buttons {
+            position: absolute;
+            top: 0;
+            right: 20px;
+            width: 20px;
+            text-align: center;
+
+            a {
+                display: inline-block;
+                margin: 2px;
+                text-align: center;
+            }
+        }
+    }
+    .ui-editable-field-value .input-type-textarea {
+        .edit-text:hover, .edit-text:focus {
+            background-color: transparent;
+        }
+    }
+    .ui-editable-field-value:hover .input-type-textarea {
+        .edit-icon, .edit-icon {
+            color: $text-color;
+        }
     }
 }
 
