Fixed taggable directive

--- a/resources/angular-views/movements/analysis/layouts/emphasis.html
+++ b/resources/angular-views/movements/analysis/layouts/emphasis.html
@@ -145,6 +145,15 @@
                     </span>
 
                     <!-- Tags -->
+                    <ui-editable-standalone-field
+                        data-model="movement"
+                        data-key="tags"
+                        data-empty="Tags:"
+                        data-input-type="tag-title"
+                        data-max-tags="20"
+                        data-save="saveMovementDetails"
+                        data-save-callback="saveMovementDetailsCallback">
+                    </ui-editable-standalone-field>
 
                 </div>
 
