--- a/resources/angular-views/partials/directives/ui-editable-fields/standalone-field.html
+++ b/resources/angular-views/partials/directives/ui-editable-fields/standalone-field.html
@@ -12,9 +12,9 @@
 
         <!-- Editable field -->
         <div ng-switch-when="editing" class="col-sm-12">
-            <div ng-if="inputType == 'textarea'" class="input-type-textarea">
 
-                <textarea ng-model="model[key]" class="form-control"></textarea>
+            <!-- Type: tag -->
+            <div ng-if="inputType == 'tag-title'" class="input-type-tag">
 
                 <div class="buttons">
                     <a ng-click="cancel()" title="Cancel" href="javascript:;">
@@ -24,8 +24,16 @@
                         <i class="fa fa-floppy-o"></i>
                     </a>
                 </div>
+
+                <selectize
+                    ng-model="model[key]"
+                    class="form-control text-left"
+                    config="selectizeConfig"
+                    options="options">
+                </selectize>
             </div>
 
+            <!-- Type: text -->
             <div ng-if="inputType == 'text'" class="input-group">
                 <span class="input-group-btn">
                     <button ng-click="cancel()" title="Cancel" class="btn btn-danger" type="button">
@@ -41,12 +49,27 @@
                     type="text"
                     class="form-control">
             </div>
+
+            <!-- Type: textarea -->
+            <div ng-if="inputType == 'textarea'" class="input-type-textarea">
+
+                <textarea ng-model="model[key]" class="form-control"></textarea>
+
+                <div class="buttons">
+                    <a ng-click="cancel()" title="Cancel" href="javascript:;">
+                        <i class="fa fa-times"></i>
+                    </a>
+                    <a ng-click="save()" title="Save" href="javascript:;">
+                        <i class="fa fa-floppy-o"></i>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <!-- Saving notice -->
         <div ng-switch-when="saving" class="col-sm-12">
             <span class="input-type-{{ inputType }}">
-                {{ model[key] || empty }}
+                {{ display || model[key] || empty }}
                 <i class="fa fa-spinner fa-spin fa-fw"></i>
             </span>
         </div>
@@ -55,7 +78,7 @@
         <div ng-switch-default class="col-sm-12 ui-editable-field-value">
             <a ng-click="edit()" href="javascript:;" class="input-type-{{ inputType }}">
                 <span class="edit-text">
-                    {{ model[key] || empty }}
+                    {{ display || model[key] || empty }}
                 </span>
                 <i class="edit-icon fa fa-pencil"></i>
             </a>
